Fix Netlify deployment issues
- Set correct publish directory to 'public' in netlify.toml
- Add proper MIME type headers for JavaScript files in _headers
- Add modern mobile-web-app-capable meta tag alongside deprecated one
- Copy CSS files to public directory
- Add proper Content-Type headers for service worker and manifest
- Fix JavaScript and icon loading issues

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # No build command needed for static site
-  publish = "."
+  publish = "public"
 
 [build.environment]
   # Static site environment
